--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.6.16", features = ["ws"] }
+dotenv = "0.15.0"
 futures = "0.3.28"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
+sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
 tokio = { version = "1.27.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["util"] }
 tower-http = { version = "0.4.0", features = ["trace"] }
