--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ futures = "0.3.28"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
+surrealdb = { version = "1.0.0-beta.9", features = ["protocol-http"] }
 tokio = { version = "1.27.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["util"] }
 tower-http = { version = "0.4.0", features = ["trace"] }
