--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
 surrealdb = { version = "1.0.0-beta.9", features = ["protocol-http"] }
 tokio = { version = "1.27.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["util"] }
-tower-http = { version = "0.4.0", features = ["trace"] }
+tower-http = { version = "0.4.0", features = ["trace", "fs"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
